--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,21 @@
 .home {
-
+  section {
+    padding: 40px;
+  }
+  .header-container {
+    border-bottom: 1px solid;
+  }
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -58,4 +66,4 @@
       margin-bottom: 30px;
     }
   }
-}// home
+} // home
