--- a/css/index.css
+++ b/css/index.css
@@ -169,10 +169,10 @@ img {
   margin: 0 auto;
 }
 nav a {
-  color: #333;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   padding: 5px 10px;
+  color: #212529;
 }
 .footer {
   width: 100%;
@@ -185,22 +185,27 @@ nav a {
   font-size: 1.6rem;
   padding: 20px;
 }
-.home section {
-  padding: 40px;
-}
-.home .header-container {
+.header-container {
   border-bottom: 1px solid;
+  padding: 20px;
 }
-.home header {
+header {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  padding: 20px 32rem;
+  border-bottom: 2px dashed #C0C0C0;
 }
 .home .content-section {
-  margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 20px;
+}
+.home .content-section .intro {
+  padding: 20px 0;
+  margin-bottom: 20px;
+  border-bottom: 2px dashed #C0C0C0;
 }
 .home .content-section .text-content {
   width: 48%;
@@ -212,6 +217,9 @@ nav a {
 }
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+.home .content-section .fun-bus-img {
+  width: 100%;
 }
 .home .inverse-content {
   padding-bottom: 30px;
