--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 // Navigation Styles here
 nav a {
-  color: #333;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   padding: 5px 10px;
+  color: @font-color;
 }
