--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,3 +1,14 @@
 // Mixins in here
 .custom-button() {
+  padding: 10px 5.5rem;
+  border-radius: 10px;
+  font-size: 1.6rem;
+  background-color: @button-bg;
+  color: @main-bg;
+}
+
+.full-width(@w:100%) {
+  @media @mobile {
+    width: @w;
+  }
 }
