--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,13 @@
 // Navigation Styles here
-nav a {
-  text-decoration: none;
-  font-size: 1.6rem;
-  padding: 5px 10px;
-  color: @font-color;
+nav {
+  padding-top: 10px;
+  a {
+    text-decoration: none;
+    font-size: 1.6rem;
+    padding: 5px 10px;
+    color: @font-color;
+    @media @mobile {
+      padding: 5px 30px;
+    }
+  }
 }
